-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.4
-
None
With following QML application:
import QtQuick 1.1 Rectangle { width: 360 height: 200 TextEdit { id: textEdit selectByMouse: true mouseSelectionMode: TextInput.SelectWords anchors {left: parent.left; right: parent.right} wrapMode: TextEdit.Wrap font.pixelSize: 30 text: "these are the Lines of\nand text\nhere which cant be selected" } }
Start mouse selection from the first letter and drag the mouse to bottom right corner of the window.
Expected behavior:
Lines should get selected as the y position gets to a new line. See the behavior without mouseSelectionMode: TextInput.SelectWords
Actual behavior:
Line is only selected when mouse is dragged over the word.
Now it's very hard to select text with touch devices
| For Gerrit Dashboard: QTBUG-19230 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 292,2 | Make TextEdit word selection more natural. | master | qt/qtbase | Status: MERGED | +2 | 0 |